More fixes to racx and esc tests